@@ -14,6 +14,7 @@ Version 0.4o
  - The same experience boost is added at the end of the Halloween event (bit late for it, but oh well)
  - Getting food from Momo also gives the exp buff
 * Added a lot of pregnancy triggers (including stuff for mpreg). Holler if you find a scene which you feel should trigger an impregnation but doesn't, report it
+* Restricted the effects of Testos. If you are pregnant, that womb cannot be removed by the TF
 * Added Cassidy the weapon shop owner to Rigard, written by The Observer.
 
 --------------------------------------------
